@@ -1,3 +1,9 @@
+2017-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/sqrtm.R (sqrtm): simple modification so it works for 1x1 matrix
+	* R/logm.Higham08.R (rootS): (ditto)
+	* src/init.c: "finish" registration
+
 2016-12-13  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.999-1
